--- a/index.html
+++ b/index.html
@@ -28,89 +28,79 @@
         <img class="header__logo-image" src="./images/logo-black.svg" alt="Логотип проекта">
       </a>
       <address class="address header__address">
-        <a class="header__address-tel" href="tel:+99995555555">+9 999 555 5555</a>
-        <a class="header__address-mail" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
     </header>
     <main class="content">
       <section class="cover">
         <h1 class="cover__title">
-          <span class="aligned-text">о<span class="letter-spacing-extended">но</span>
-          <span class="no-letter-spacing"></span></span>
-          <span class="aligned-text_center">те<span class="letter-spacing-extended">бе</span>
-          <span class="no-letter-spacing"></span></span>
-          <span class="aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
+          <span class="aligned-text">о<span class="letter-spacing-extended">но</span><span class="no-letter-spacing"></span></span>
+          <span class="aligned-text aligned-text_center">те<span class="letter-spacing-extended">бе</span><span class="no-letter-spacing"></span></span>
+          <span class="aligned-text aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
         </h1>
         <div class="cover__description">
-          <h2 class="cover__description-text">
+          <p class="cover__description-text">
             <span class="word-spacing-extended">Аукцион вещей, в которые никто </span>не верил
-          </h2>
+          </p>
           <button class="bet-button" type="button">Сделать ставку</button>
         </div>
         <div class="overlay"></div>
       </section>
       <section class="lots">
-        <h3 class="lots__heading">Лоты</h3>
+        <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
-          <li class="card">
+          <li class="lots__card-list-item">
             <a class="card-link" href="#0">
-              <article class="card_type_film">
-                <div class="card__content">
-                  <h4 class="card__title">
-                    Фильм режиссёра, который бросил киношколу
-                  </h4>
-                  <div class="card__text">
-                    <p>
-                      Не просто бросил, а ушёл с первой лекции. Какой была бы
-                      ваша ставка, если бы вы не знали, что режиссёр — Пол Томас
-                      Андерсон?
-                    </p>
-                  </div>
+              <article class="card card_type_film">
+                <h3 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <div class="card__text">
+                  <p>
+                    Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                    ставка, если бы вы не знали, что режиссёр — Пол Томас
+                    Андерсон?
+                  </p>
                 </div>
                 <div class="overlay"></div>
               </article>
             </a>
           </li>
-          <li class="card">
+          <li class="lots__card-list-item">
             <a class="card-link" href="#0">
-              <article class="card_type_book">
-                <div class="card__content">
-                  <h4 class="card__title">
-                    Книга, где описан один скучный день из жизни рекламного
-                    агента
-                  </h4>
-                  <div class="card__text">
-                    <p>
-                      Объёмом почти в тысячу страниц. Иногда без знаков
-                      препинания и с переходами на древнеанглийский. В ней
-                      одновременно рассказывается о 16 июня 1904 года и об
-                      истории литературы, начиная с античных времён. И это всё
-                      накладывается на эпическую поэму Гомера. Сколько бы вы
-                      поставили на «Улисса» Джеймса Джойса?
-                    </p>
-                  </div>
+              <article class="card lots__card card_type_book">
+                <h3 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <div class="card__text">
+                  <p>
+                    Объёмом почти в тысячу страниц. Иногда без знаков препинания
+                    и с переходами на древнеанглийский. В ней одновременно
+                    рассказывается о 16 июня 1904 года и об истории литературы,
+                    начиная с античных времён. И это всё накладывается на
+                    эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                    Джеймса Джойса?
+                  </p>
                 </div>
                 <div class="overlay"></div>
               </article>
             </a>
           </li>
-          <li class="card">
+          <li class="lots__card-list-item">
             <a class="card-link" href="#0">
-              <article class="card_type_picture">
-                <div class="card__content">
-                  <h4 class="card__title">
-                    Картина, которую повторит даже 5-летний сын маминой подруги
-                  </h4>
-                  <div class="card__text">
-                    <p>
-                      Ну действительно, там линия, тут кружочек, а здесь и вовсе
-                      что-то похожее на инфузорию-туфельку. Никаких полей,
-                      лесов, котиков… Сколько бы вы на такое поставили, если бы
-                      не знали, что это — одна из революционных работ
-                      Кандинского?
-                    </p>
-                  </div>
+              <article class="card lots__card card_type_picture">
+                <h3 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <div class="card__text">
+                  <p>
+                    Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                    что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                    котиков… Сколько бы вы на такое поставили, если бы не знали,
+                    что это — одна из революционных работ Кандинского?
+                  </p>
                 </div>
                 <div class="overlay"></div>
               </article>
@@ -126,7 +116,7 @@
           </div>
         </div>
         <div class="about__column-text">
-          <h3 class="about__title">Об аукционе</h3>
+          <h2 class="about__title">Об аукционе</h2>
           <div class="about__text">
             <p>
               Здесь вы не встретите очередное пафосное собрание невероятно
@@ -149,9 +139,9 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="address footer__address">
-        <a class="footer__address-tel" href="tel:+99995555555">+9 999 555 5555</a>
-        <a class="footer__address-mail" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <address class="address">
+        <a class="address__link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
       <nav class="footer__menu">
